[metadata]
name = torchsim
description = A port of the jaxsim library to torch.
long_description = file: README.md
long_description_content_type = text/markdown
author = Albert H. Li
license = BSD
license_file = LICENSE
platforms = any
url = https://github.com/alberthli/torchsim

keywords =
    physics
    physics engine
    jax
    rigid body dynamics
    featherstone
    reinforcement learning
    robot
    robotics
    sdf
    urdf

classifiers =
    Development Status :: 4 - Beta
    Framework :: Robot Framework
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Games/Entertainment :: Simulation
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.10
install_requires =
    matplotlib
    numpy
    pptree
    rod
    scipy
    torch

[options.packages.find]
where = src

[options.extras_require]
style =
    black
    isort
testing =
    pytest
    pytest-icdiff
all =
    %(style)s
    %(testing)s

[tool:pytest]
addopts = -rsxX -v --strict-markers
testpaths = tests
